# trackball-watch

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md
.cursor/rules/: project-overview.mdc  rust-conventions.mdc  svelte-frontend.mdc  swift-conventions.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
apps/companion-ios/: project.yml
apps/host-desktop/: index.html  package-lock.json  package.json  vite.config.ts
apps/host-desktop/src-tauri/: Cargo.toml  Info.plist  entitlements.plist  macos-resign-bundle.sh  tauri.conf.json
apps/host-desktop/src-tauri/icons/: icon.icns
apps/host-desktop/src-tauri/src/: lib.rs  main.rs  trace_file.rs
apps/host-desktop/src-tauri/src/engine/: accel.rs  gestures.rs  kalman.rs  mod.rs  one_euro.rs  pointing_device.rs  trackball.rs  virtual_ball.rs
apps/host-desktop/src-tauri/src/injector/: linux.rs  macos.rs  mod.rs  platform.rs  windows.rs
apps/host-desktop/src-tauri/src/protocol/: crypto.rs  mod.rs  packets.rs
apps/host-desktop/src-tauri/src/server/: connection.rs  mdns.rs  mod.rs  udp.rs
apps/host-desktop/src-tauri/src/server/mdns/: common.rs  macos.rs  mod.rs  rust.rs
apps/host-desktop/src-tauri/src/settings/: config.rs  profiles.rs
apps/watch-ios/: Local.xcconfig.example  project.yml
docs/: architecture.md  branding.md  product.md
scripts/: sync-version-from-git.mjs
shared/protocol/: tbp_spec.md
tools/: install_mobile_devices.sh
tools/latency-tester/: Cargo.toml
(+48 files in other folders)
