[package]
name = "trackball-watch"
version = "1.0.0"
description = "TrackBall Watch — Desktop Host"
edition = "2021"
rust-version = "1.75"

[lib]
name = "trackball_watch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "trackball-watch"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "2.0.0-rc.3"
tokio = { version = "1", features = ["full"] }
aes-gcm = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
mdns-sd = "0.11"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
dirs = "5"
thiserror = "1"
proptest = { version = "1", optional = true }

[features]
default = []
testing = ["proptest"]

[dev-dependencies]
proptest = "1"
tokio-test = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Foundation",
] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
